force-app/main/default/objects/Event_Organizer__c/fields/ShortIntro__c.field-meta.xml
<CustomField>
    <fullName>ShortIntro__c</fullName>
    <label>Short Intro</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>